# butler-gpt

./: Cargo.toml  README.md
src/: main.rs
src/deepl/: mod.rs  translate.rs
src/opeanai/: chat.rs  mod.rs  structs.rs
src/opeanai/chat/: mod.rs  requests.rs  structs.rs
src/opeanai/completion/: mod.rs  structs.rs
src/opeanai/edit/: mod.rs  structs.rs
