[package]
name = "butler-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
cpal = { version = "*" }
hound = "3.5.0"
druid = "0.8.3"
strum = { version = "0.24", features = ["derive"] }
chrono = "0.4.23"
iso639-1 = "0.3.0"
async-trait = "0.1.66"